<resources>
    <string name="app_name">Catatmak.</string>
    <string name="title_onboarding_1">Selamat datang di Catatmak!</string>
    <string name="desc_onboarding_1">Aplikasi yang bikin pencatatan keuanganmu lebih mudah. Siap analisa keuanganmu dengan bantuan prediksi dari ai</string>
    <string name="title_onboarding_2">Catat Keuangan Mudah Langsung Terhubung dengan Whatsapp</string>
    <string name="desc_onboarding_2">Aplikasi yang bikin pencatatan keuanganmu lebih mudah. Siap analisa keuanganmu dengan bantuan prediksi dari ai</string>
    <string name="title_onboarding_3">Dapatkan Analisa Keuangan by Mamih AI yang Langsung Terkirim Lewat Whatsapp Setiap Minggu</string>
    <string name="desc_onboarding_3">Aplikasi yang bikin pencatatan keuanganmu lebih mudah. Siap analisa keuanganmu dengan bantuan prediksi dari ai</string>
    <string name="try_now">GAS COBAIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_transaction">Transaksi</string>
    <string name="title_home">Beranda</string>
    <string name="title_add_transaction">Catatmak</string>
    <string name="title_analysis">Analisa</string>
    <string name="title_profile">Profil</string>
    <string name="todays_expenses">Pengeluaran Hari Ini</string>
    <string name="total">Rp. 150.000</string>
    <string name="total_zero">Rp. 0</string>
    <string-array name="insight_title">
        <item>Pengeluaranmu Hari Ini Naik 50% 😭</item>
        <item>Pengeluaranmu Hari Ini Naik 50% 😭</item>
    </string-array>
    <string name="insight_message">Kamu lumayan boros nih bulan ini, terjadi kenaikan pengeluaran pada kategori Makan sebesar Rp. 1.000.000</string>
    <string name="todays_transaction">Transaksi Hari Ini</string>
    <string name="created_at">29 Oktober, 15.00</string>
    <string name="item_name">Bakso dan Es Teh Manis</string>
    <string name="category_name">Makan Minum</string>
    <string name="price">%1$s %2$s</string>
    <string name="mak_beti_image">Gambar Mak Beti</string>
    <string name="mak_beti_ai_image">Gamar Mak Beti AI</string>
    <string name="one_week_ago">1 Minggu Terakhir</string>
    <string name="category">Kategori</string>
    <string name="one_month_ago">30 Hari Terakhir</string>
    <string name="one_day_ago">1 Hari Terakhir</string>
    <string name="food">Makanan dan Minuman</string>
    <string name="transportation">Transportasi</string>
    <string name="entertainment">Hiburan</string>
    <string name="ic_outcome">Icon Pengeluaran</string>
    <string name="ic_income">Icon Pendapatan</string>
    <string name="income">Pendapatan</string>
    <string name="total_income">Rp. 5.000.000</string>
    <string name="outcome">Pengeluaran</string>
    <string name="total_expenses">Rp. %1$s</string>
    <string name="list_transaction">Daftar Transaksi</string>
    <string-array name="data_created_at">
        <item>29 Oktober, 15.00</item>
        <item>29 Oktober, 15.00</item>
        <item>29 Oktober, 15.00</item>
        <item>29 Oktober, 15.00</item>
    </string-array>
    <string-array name="data_item_name">
        <item>Bakso dan Es Teh Manis</item>
        <item>Bakso dan Es Teh Manis</item>
        <item>Bakso dan Es Teh Manis</item>
        <item>Nemu Duit Dijalan</item>
    </string-array>
    <string-array name="data_category_name">
        <item>Tidak Terkategori</item>
        <item>Makanan</item>
        <item>Transportasi</item>
        <item>Hiburan</item>
    </string-array>
    <string-array name="data_price">
        <item>24.000</item>
        <item>24.000</item>
        <item>24.000</item>
        <item>50.000</item>
    </string-array>
    <string-array name="data_is_plus">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="insight_created_at">
        <item>Minggu, 29 Oktober</item>
        <item>Minggu, 29 Oktober</item>
    </string-array>
    <string-array name="insight_desc">
        <item>Kamu lumayan boros nih bulan ini, terjadi kenaikan pengeluaran pada kategori Makan sebesar Rp. 1.000.000</item>
        <item>Kamu lumayan boros nih bulan ini, terjadi kenaikan pengeluaran pada kategori Makan sebesar Rp. 1.000.000</item>
    </string-array>
    <string-array name="insight_is_favorite">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="data_date_time">
        <item>Hari Ini</item>
        <item>1 Desember</item>
        <item>30 November</item>
    </string-array>
    <string-array name="data_total">
        <item>5.000.000</item>
        <item>5.000.000</item>
        <item>5.000.000</item>
    </string-array>
    <string-array name="data_expenses_amount">
        <item>10</item>
        <item>10</item>
        <item>10</item>
    </string-array>
    <string name="update_transaction">Ubah Transaksi</string>
    <string name="expense_name">Nama Pengeluaran</string>
    <string name="tv_price">Harga</string>
    <string name="update">Update</string>
    <string name="delete">HAPUS</string>
    <string name="record_finances">Catat Keuangan</string>
    <string name="record_manually">MANUAL</string>
    <string name="record_with_photo">PAKAI PHOTO</string>
    <string name="record_with_whatsapp">PAKAI WHATSAPP</string>
    <string name="date">Tanggal</string>
    <string name="record_manual_transaction">Catat Transaksi Manual</string>
    <string name="save">SIMPAN</string>
    <string name="welcome">Halo, %1$s 👋</string>
    <string name="transaction">Riwayat Transaksi</string>
    <string name="analysis">Analisa Keuangan</string>
    <string name="add_transaction">Catat Transaksi</string>
    <string name="today">Hari ini</string>
    <string name="this_week">Minggu Ini</string>
    <string name="this_month">Bulan Ini</string>
    <string name="insight_by_mamih_ai">Insight by Mamih AI</string>
    <string name="analysis_title">Pengeluaranmu Hari Ini Naik 50% 😭</string>
    <string name="analysis_desc">Kamu lumayan boros nih bulan ini, terjadi kenaikan pengeluaran pada kategori Makan sebesar Rp. 1.000.000</string>
    <string name="date_hint">Contoh : 26 November 2023</string>
    <string name="expense_name_hint">Contoh: Bakso, Mie Ayam, Sate Kambing</string>
    <string name="income_name_hint">Contoh : Gaji, Bonus, Investasi</string>
    <string name="price_hint">Contoh: 15000</string>
    <string name="category_hint">Pilih Kategori</string>
    <string name="tv_total_income">Total Pemasukan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="title_categories_automatically">%1$s Pengeluaran Kamu Belum\n Terkategorisasi Nih 😬</string>
    <string name="categories_automatically">KATEGORI OTOMATIS</string>
    <string name="categories">Kategori Otomatis</string>
    <string name="ok_update">OKE GASS UPDATE</string>
    <string name="username">RAYHAN RAFIUD DAROJAT</string>
    <string name="member_status">Premium Member</string>
    <string name="settings">Pengaturan Akun</string>
    <string name="change_profile">Ubah Profil</string>
    <string name="about">Tentang Kami</string>
    <string name="policy">Kebijakan Privasi</string>
    <string name="logout">KELUAR</string>
    <string name="premium_medal">Mendali Premiuh Member</string>
    <string name="change_profile_icon">Icon Ubah Profil</string>
    <string name="about_me_icon">Icon Tentang Kami</string>
    <string name="policy_icon">Icon Kebijakan Privasi</string>
    <string name="no_wa">Nomor Whatsapp</string>
    <string name="no_hint">085741892603</string>
    <string name="name">Nama Lengkap</string>
    <string name="name_hint">contoh: Rayhan Rafiud Darojat</string>
    <string name="email">Email</string>
    <string name="email_name">contoh: rayhan@gmail.com</string>
    <string name="gander">Jenis Kelamin</string>
    <string name="age">Usia</string>
    <string name="age_hint">Masukan Usia</string>
    <string name="intro">Selamat datang di Catatmak, aplikasi pencatatan keuangan yang memudahkan Anda untuk mengelola keuangan pribadi secara efisien. Kami berkomitmen untuk melindungi privasi dan keamanan informasi pengguna. Dengan menggunakan Catatamk, Anda setuju dengan kebijakan privasi kami sebagai berikut:</string>
    <string name="one">"1."</string>
    <string name="title_1">Pencatatan Data Keuangan</string>
    <string name="desc_1">CatatMak menyimpan data keuangan yang Anda masukkan melalui aplikasi ini. Informasi tersebut digunakan untuk menyediakan layanan pencatatan keuangan dan memberikan analisis yang bermanfaat untuk membantu Anda mengelola keuangan pribadi Anda.</string>
    <string name="two">2.</string>
    <string name="title_2">Keamanan Data</string>
    <string name="desc_2">Kami memprioritaskan keamanan data pengguna. CatatMak menggunakan langkah-langkah keamanan teknologi informasi terkini untuk melindungi informasi pribadi Anda dari akses yang tidak sah, pengungkapan, perubahan, dan</string>
    <string name="three">3.</string>
    <string name="title_3">Kebijakan Cookie</string>
    <string name="desc_3">CatatMak mungkin menggunakan cookie atau teknologi serupa untuk mengumpulkan informasi yang membantu meningkatkan layanan kami. Anda dapat mengelola pengaturan cookie melalui pengaturan perangkat Anda.</string>
    <string name="four">4.</string>
    <string name="title_4">Perubahan Kebijakan</string>
    <string name="desc_4">Kebijakan privasi ini dapat berubah seiring waktu untuk mencerminkan perubahan dalam hukum atau pembaruan layanan. Pembaruan tersebut akan diinformasikan kepada pengguna melalui saluran komunikasi yang sesuai.</string>
    <string name="five">5.</string>
    <string name="title_5">Perubahan Kebijakan</string>
    <string name="desc_5">ika Anda memiliki pertanyaan atau kekhawatiran tentang kebijakan privasi kami, silakan hubungi tim dukungan kami melalui email di support@catatmak.com.</string>
    <string name="closing">Dengan menggunakan CatatMak, Anda menunjukkan persetujuan Anda terhadap kebijakan privasi ini. Terima kasih telah memilih CatatMak sebagai mitra pencatatan keuangan Anda.</string>
    <string name="intro_about_us">Sejak hari pertama, kami telah diberkahi dengan anggota tim yang luar biasa:</string>
    <string name="member_1">Rayhan Rafiud Darojat dari STMIK Widya Utama</string>
    <string name="member_2">Muhammad Rifki dari STMIK Widya Utama</string>
    <string name="member_3">Jovanic Morgan Universitas Sriwijaya</string>
    <string name="member_4">Muhammad Zhafran Universitas Sriwijaya</string>
    <string name="member_5">Putu Putri Pratiwi Universitas Udayana</string>
    <string name="six">6.</string>
    <string name="member_6">Ni Putu Suci Paramita Universitas Udayana</string>
    <string name="seven">7.</string>
    <string name="member_7">Dewa Athallah Putra Kamiko Institut Teknologi Indonesia</string>
    <string name="closing_about_us">Terima kasih kepada semua anggota tim atas kontribusi dan semangat yang mereka bawa ke dalam setiap langkah proyek ini. Kami berharap untuk terus tumbuh dan meraih lebih banyak pencapaian luar biasa bersama-sama di tahun-tahun mendatang. Selamat ulang tahun yang pertama, dan mari terus berkarya bersama menuju masa depan yang penuh prestasi! 🎉🚀</string>
    <string name="supported_by">Supported by</string>
    <string name="logo_bangkit_dikti">Logo Bangkit Dikti</string>
    <string name="expenses_statistic">Statistik Pengeluaran</string>
    <string name="next">LANJUT</string>
    <string name="back"><![CDATA[< Kembali]]></string>
    <string name="verif_title">Verifikasi Kode</string>
    <string name="verif_subtitle">Masukan kode verifikasi yang telah dikirimkan ke nomor whatsapp +%1$s</string>
    <string name="not_have_receive_message">Tidak Menerima Pesan</string>
    <string name="send_again">Kirim Ulang</string>
    <string name="verif_code_hint">343534</string>
</resources>