<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_transaction"
        android:title="@string/title_transaction" />

    <item
        android:id="@+id/navigation_add_transaction"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add_transaction" />

    <item
        android:id="@+id/navigation_analysis"
        android:icon="@drawable/ic_analysis"
        android:title="@string/analysis" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>