<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.privacy_policy.PrivacyPolicyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topAppBarLayout"
            style="@style/Widget.Material3.AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:elevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:elevation="8dp"
                app:title="@string/policy"
                app:titleTextAppearance="@style/MyAppBarStyle"
                app:titleTextColor="@color/dark_blue" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tvIntro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/intro"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topAppBarLayout" />

        <TextView
            android:id="@+id/tvNumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/one"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvIntro" />

        <TextView
            android:id="@+id/tvTitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/title_1"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvIntro"
            app:layout_constraintStart_toEndOf="@id/guideline" />

        <TextView
            android:id="@+id/tvDesc1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/desc_1"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvTitle1" />

        <TextView
            android:id="@+id/tvNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/two"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle2" />

        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/title_2"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDesc1"
            app:layout_constraintStart_toEndOf="@id/guideline" />

        <TextView
            android:id="@+id/tvDesc2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/desc_2"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvTitle2" />

        <TextView
            android:id="@+id/tvNumber3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/three"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle3" />

        <TextView
            android:id="@+id/tvTitle3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/title_3"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvDesc2" />

        <TextView
            android:id="@+id/tvDesc3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/desc_3"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvTitle3" />

        <TextView
            android:id="@+id/tvNumber4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/four"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle4" />

        <TextView
            android:id="@+id/tvTitle4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/title_4"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvDesc3" />

        <TextView
            android:id="@+id/tvDesc4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/desc_4"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvTitle4" />

        <TextView
            android:id="@+id/tvNumber5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/five"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle5" />

        <TextView
            android:id="@+id/tvTitle5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/title_5"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvDesc4" />

        <TextView
            android:id="@+id/tvDesc5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/desc_5"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvTitle5" />

        <TextView
            android:id="@+id/tvClosing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="24dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="6dp"
            android:text="@string/closing"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvDesc5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray1"
            app:layout_constraintTop_toBottomOf="@id/topAppBarLayout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="35dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
